<resources>
    <string name="app_name">To-Let</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>

    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="loction">Location</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>


    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>

    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="NID">National id Card</string>
    <string name="register">REGISTER</string>
</resources>